fixtures/src/valid/epub3-with-media-overlay/OEBPS/content.opf
<?xml version="1.0" encoding="UTF-8"?>
<package xmlns="http://www.idpf.org/2007/opf" version="3.0" unique-identifier="uid">
  <metadata xmlns:dc="http://purl.org/dc/elements/1.1/">
    <dc:identifier id="uid">urn:uuid:55555555-5555-5555-5555-555555555555</dc:identifier>
    <dc:title>Media Overlay Book</dc:title>
    <dc:language>en</dc:language>
    <meta property="dcterms:modified">2025-01-01T00:00:00Z</meta>
    <meta property="media:duration">0:00:03.000</meta>
    <meta property="media:duration" refines="#ch1overlay">0:00:03.000</meta>
  </metadata>
  <manifest>
    <item id="nav" href="nav.xhtml" media-type="application/xhtml+xml" properties="nav"/>
    <item id="chapter1" href="chapter1.xhtml" media-type="application/xhtml+xml" media-overlay="ch1overlay"/>
    <item id="ch1overlay" href="chapter1.smil" media-type="application/smil+xml"/>
    <item id="audio1" href="audio.mp3" media-type="audio/mpeg"/>
  </manifest>
  <spine>
    <itemref idref="chapter1"/>
  </spine>
</package>
